= CHANGES

== 0.9.11 (Unreleased)

* DM 1.0 and AR Tasks compat
* Fixed DM 1.0 rake tasks
* Dropped support of :respond_to in favor of :provides
* Added provides in controller level App.controller :provides => [:json, :xml]
* Added compatibility with AS 3.0
* Fixed compatibility with DM 1.0
* Allow models to be generated in subapps with --app flag
* Added bundler support also for testing [Thanks to Ryanfitz]
* Updated I18n dependency to version > 0.4.0
* Padrino now uses http_router instead of usher to handle url routing
* Reorganized a bit ours "servers"
* Added support for easily adding custom dependency paths with Padrino.custom_dependencies("...")
* Padrino::Application.run! now perform Padrino.load! automatically (useful if you want to use MyApp.run!)
* PADRINO_ROOT if not defined will be automatically detected
* Improved reloader (that fixes also problems with MM)
* Core refactoring
* Fixed mounter in certain scenarios (i.e. single app file)
* Fixed an issue when using only Padrino Rendering (without Padrino Routing) in a Sinatra application
* Fixed a path must always match the url_format and optionally the given request.accept
* Updated usher version which fix a problem using :provides with dashes in the URL
* Improve the router's use of base uri's in url(). [Thanks to Lholden]
* Support params as arrays for generation. More efficent generation
* Added 405 support
* Removed jeweler dependency and use dynamic gemspecs
* Fixed / Updated German translations [Thanks to Gottlike]
* Fixed a problem with extensions since Sinatra#register extend every thing
* Fixed a problem when reloading apps
* Fixed Mongoid adapter using updated master branch
* Moved bundler dependency from padrino-core to padrino-gen
* Moved I18n dependency from padrino-core to padrino-helpers
* Use 'mail' library and remove 'tmail' dependency for padrino-mailer
* Adds support for a quick 'email' helper for delivering mail in padrino-mailer
* Replaces old mailer syntax with a more consistent dsl